2FA email checkbox to be only visible to admin

--- a/app/views/out_of_band_auths/_preferences.html.erb
+++ b/app/views/out_of_band_auths/_preferences.html.erb
@@ -1,3 +1,7 @@
+<% if User.current.admin? %>
+
 <%= labelled_fields_for :pref, user.pref do |pref_fields| %>
   <p><%= pref_fields.check_box :enabled_out_of_band_auth %></p>
+<% end %>
+
 <% end %>
